Revision history for HTML::Accessors

          - Toolchain update

0.13.1    2015-05-20 10:34:33
          - Added badges and public repository

0.12.1    2014-08-10 08:42:28
          - Fixed test due to change in HTML::GenerateUtil
          - Removed Ideent and VERSION strings

0.11.1    2013-09-04 22:21:36
          - Fixed hash order bug in XHTML Popup test

0.10.1    2013-09-03 14:24:17
          - Updated toolchain

0.9.3     2013-08-26 00:54:38
          - Improved Devel::Cover scores
          - Switched to Dist::Zilla

0.8.1     2013-05-16 21:53:20
          - Converted from SVN to Git

0.7.125   2012-12-01
          - Fixed hash order dependent test
          - Updated inc::Bob to 1.7

0.7.124   2012-05-07
          - Add POD spelling test
          - Updated inc::Bob to 1.5

0.7.123   2012-05-07
          - Create CPAN testing exceptions 860317fe-771b-1014-bd10-14ac237ab312

0.7.122   2012-04-18
          - Turned CPAN testing on. No exceptions
          - Modernised tests
          - Updated inc::Bob to 1.3
          - Updated inc::Bob to 1.2

0.6.117   2012-03-29
          - Upped min Perl ver to 5.10
          - Funs over stopping CPAN testing
          - Updated inc::Bob. Added inc::CPANTesting

0.6.113   2012-03-03
          - Turned CPAN testing on for shits and giggles
          - Added classes hash to popupMenu
          - Updated inc::Bob

0.5.105   2011-06-26
          - Radio groups. If the label exists but is undef skip the label

0.4.104   2011-05-22
          - Updated POD
          - Fixed bug in AUTOLOAD propagation
          - Stopped mapping button element to input elements of type button
          - Moved boilerplate M::B subclass code to inc/Bob.pm

0.3.87    2010-06-22
          - Patched broken version number handling in Module::Build

0.3.85    2009-11-19
          - Added label_class to radio_group


